--- a/bundleconfig.json
+++ b/bundleconfig.json
@@ -1,24 +1,29 @@
-﻿// Configure bundling and minification for the project.
-// More info at https://go.microsoft.com/fwlink/?LinkId=808241
-[
+﻿[
   {
     "outputFileName": "wwwroot/css/site.min.css",
-    // An array of relative input file paths. Globbing patterns supported
     "inputFiles": [
+      "wwwroot/lib/bootstrap/dist/css/bootstrap.css",
+      "wwwroot/lib/font-awesome/css/font-awesome.min.css",
+      "wwwroot/lib/textAngular/dist/textAngular.css",
       "wwwroot/css/site.css"
     ]
   },
   {
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
+      "wwwroot/lib/jquery/dist/jquery.js",
+      "wwwroot/lib/bootstrap/dist/js/bootstrap.js",
+      "wwwroot/lib/datatables/media/js/jquery.dataTables.min.js",
+      "wwwroot/lib/angular/angular.min.js",
+      "wwwroot/lib/textAngular/dist/textAngular-rangy.min.js",
+      "wwwroot/lib/textAngular/dist/textAngular-sanitize.min.js",
+      "wwwroot/lib/textAngular/dist/textAngular.min.js",
       "wwwroot/js/site.js"
     ],
-    // Optionally specify minification options
     "minify": {
       "enabled": true,
       "renameLocals": true
     },
-    // Optinally generate .map file
     "sourceMap": false
   }
 ]
