--- a/bower.json
+++ b/bower.json
@@ -6,9 +6,8 @@
     "Anduin"
   ],
   "license": "MIT",
-  "homepage": "",
   "dependencies": {
-    "angular": "angularjs#^1.6.0",
+    "angular": "^1.3.14",
     "font-awesome": "^4.7.0",
     "jquery-validation": ">=1.8",
     "bootstrap": "3.3.6",
