Use application insights.

--- a/SCE.csproj
+++ b/SCE.csproj
@@ -6,11 +6,17 @@
     <AssemblyName>SCE</AssemblyName>
     <PackageId>SCE</PackageId>
     <Authors>Anduin</Authors>
+    <ApplicationInsightsResourceId>/subscriptions/6eedf4ae-3d30-41a0-91cf-0d1ff1ed8ccb/resourcegroups/SCE/providers/microsoft.insights/components/SCE</ApplicationInsightsResourceId>
+    <ApplicationInsightsAnnotationResourceId>/subscriptions/6eedf4ae-3d30-41a0-91cf-0d1ff1ed8ccb/resourcegroups/SCE/providers/microsoft.insights/components/SCE</ApplicationInsightsAnnotationResourceId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Aiursoft.Pylon" Version="0.9.8" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 </Project>
