--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,5 @@
-﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SCE;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
+{
+  "ApplicationInsights": {
+    "InstrumentationKey": "a2136535-ae03-4916-a5d4-bc5ee1161b01"
   }
 }
