--- a/SCE.csproj
+++ b/SCE.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Version>2.1.0</Version>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <AssemblyName>SCE</AssemblyName>
     <PackageId>SCE</PackageId>
     <Authors>Anduin</Authors>
@@ -11,9 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aiursoft.Pylon" Version="0.9.8" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4" />
+    <PackageReference Include="Aiursoft.Pylon" Version="0.12.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
